--- a/app/globals.css
+++ b/app/globals.css
@@ -44,8 +44,9 @@ a {
   flex-direction: column;
   width: 100%;
   height: calc(100vh - 100px);
-  padding: 1rem 2rem;
+  padding: 5rem 5rem 3rem;
   overflow: hidden;
+  cursor: pointer;
 }
 
 /* .nav {
